<resources>
    <string name="app_name">Sheari</string>
    <string name="map_api_key">AIzaSyCbc2Y5AIwZ8uUeHRUXiozGN3CnpjKT0oI</string>
    <string name="log_in">Log In</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="are_you_forgot_password">Forgot password ?</string>
    <string name="user_name">Name</string>
    <string name="phone">Phone Number</string>
    <string name="you_already_have_an_account_log_in">Already have an account! login</string>
    <string name="home">Home</string>
    <string name="notifications">Notifications</string>
    <string name="more">More</string>
    <string name="bank_account">Bank account </string>
    <string name="terms_and_conditions">Terms of use</string>
    <string name="about_app">About Tour</string>
    <string name="contact_us">Contact Us</string>
    <string name="logout">Logout</string>
    <string name="skip">skip</string>
    <string name="field_req">Field required</string>
    <string name="inv_email">Invalid email</string>
    <string name="back">Back</string>
    <string name="wait">Wait...</string>
    <string name="inv_em_ps">Invalid Email or Password</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="em_exist">Email or Phone number is exist</string>
    <string name="profile">Profile</string>
    <string name="general_settings">General Settings</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="language_settings">Language Settings</string>
    <string name="no_details">No details</string>
    <string name="sign_in">Sign In</string>
    <string name="please_sign_in_or_sign_up">Please Sign In or Sign Up</string>
    <string name="cancel">Cancel</string>
    <string name="suc">Success !</string>
    <string name="bank_name">Bank Name</string>
    <string name="account_name">Account Name</string>
    <string name="account_iban">Account IBAN</string>
    <string name="account_number">Account Number</string>
    <string name="ok">OK</string>
    <string name="upload_picture">Upload Picture</string>
    <string name="select_a_picture_to_upload">Select a Picture to Upload</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="perm_image_denied">Permission image denied</string>
    <string name="done">Done</string>
    <string name="next">Next</string>
    <string name="name">Name</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="location">Location</string>
    <string name="share">share</string>
    <string name="edit">Edit</string>
    <string name="price">Price</string>
    <string name="delete">Delete</string>
    <string name="change_language">Change language</string>
    <string name="detials">Details</string>
    <string name="register">Register</string>
    <string name="upload_image">Upload Image</string>
    <string name="ads_photos">Ads Photos</string>
    <string name="about">About</string>
    <string name="time">Time</string>
    <string name="map">map</string>
    <string name="share_in">Share in</string>
    <string name="blokced">User is blocked</string>
    <string name="enter_code">Enter code</string>
    <string name="we_ll_never_share_or_sell_your_phone_number_your_privacy_is_100_guaranteed">We\'ll never share or sell your phone number your privacy is 100% guaranteed.</string>
    <string name="enter_the_sms_verification_code_below_that_was_sent_to_your_mobile_phone">Enter the SMS verification code below that was sent to your mobile phone</string>
    <string name="inc_code_verification">Incorrect code verification</string>
    <string name="you_will_receive_4_digit">You will receive 4 digit code on your mobile</string>
    <string name="resend">Resend</string>
    <string name="confirm">Confirm</string>
    <string name="inc_code">Incorrect code</string>
    <string name="email">Email</string>
    <string name="send">Send</string>
    <string name="since">since</string>
    <string name="no_name">No name</string>
    <string name="more_details">More details :</string>
    <string name="no_search_result">No search result</string>
    <string name="search_results">Search results</string>
    <string name="result">Results</string>
    <string name="from">From</string>
    <string name="no_categories_to_display">No categories to display</string>
    <string name="sms">Sms</string>
    <string name="sign_out">Sign out</string>
    <string name="select_location_on_map">Select location on map</string>
    <string name="wil_rev_req">Will review your request by admin</string>
    <string name="add_photo">Add photo</string>
    <string name="category">Category</string>
    <string name="city">City :</string>
    <string name="ch_city">Choose city</string>
    <string name="ch">Choose</string>
    <string name="select">Select</string>
    <string name="select_picture">Select picture</string>
    <string name="approved">Approved</string>
    <string name="no_notifications_to_display">No notifications to show</string>
    <string name="just_now">Just Now</string>
    <string name="a_minute_ago">Minute Ago</string>
    <string name="min">Minute</string>
    <string name="an_hour_ago">An Hour Ago</string>
    <string name="hs">Hour</string>
    <string name="yesterday">Yesterday</string>
    <string name="day">day</string>
    <string name="type_a_message">type a message....</string>
    <string name="img_sent">image sent</string>
    <string name="pass_short">password too short</string>
    <string name="code">Code</string>
    <string name="create_an_account">Create an account</string>
    <string name="about_me">About me</string>
    <string name="accept_terms_and_conditions">Accept terms and conditions</string>
    <string name="ch_exper">Choose experience</string>
    <string name="ch_dept">Choose department</string>
    <string name="cnt_sign_accept">You can\'t sign up without accepting terms and conditions</string>
    <string name="services">Services</string>
    <string name="no_service">No service</string>
    <string name="no_orders">No orders</string>
    <string name="orders">Orders</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="picture">picture</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="as_provider">Provider</string>
    <string name="as_client">Client</string>
    <string name="member_in_sheari">Member in sheari</string>
    <string name="visitor">Are you a visitor ?</string>
    <string name="will_send_email">We will send you a code on your number to reset password</string>
    <string name="client_sign_up">Client sign up</string>
    <string name="country_key">Country code</string>
    <string name="re_password">Re-Password</string>
    <string name="previous">Previous</string>
    <string name="accept_terms_conditions"><![CDATA[Accept terms & conditions]]></string>
    <string name="re_pass_not_match">re-password not match</string>
    <string name="provider_sign_up">Provider sign up</string>
    <string name="company">Company</string>
    <string name="user">User</string>
    <string name="choose_company_type">Choose Company type</string>
    <string name="holding_company">holding</string>
    <string name="shareholding">Shareholding</string>
    <string name="limited">limited</string>
    <string name="start_up">Start-up</string>
    <string name="name2">Name :</string>
    <string name="address">Address :</string>
    <string name="country">Country :</string>
    <string name="logistic_services">Logistic services</string>
    <string name="charity_offers">Charity Offers</string>
    <string name="delivery_services">Delivery services</string>
    <string name="employees">Employees</string>
    <string name="to">To</string>
    <string name="year_of_construction">Year of construction</string>
    <string name="commercial_register">Commercial Register</string>
    <string name="main_department">Main department</string>
    <string name="sub_department">Sub department</string>
    <string name="intermediate_education">Intermediate Education</string>
    <string name="primary_education">Primary education</string>
    <string name="university_education">University education</string>
    <string name="year">Year</string>
    <string name="ch_type">Choose type</string>
    <string name="ch_country">Choose country</string>
    <string name="ch_sub_dept">Choose sub department</string>
    <string name="ch_serv">Choose service</string>
    <string name="sorry_this_service_is_not_available_now">Sorry, This service is not available now</string>
    <string name="depts">Departments</string>
    <string name="events_des">Event design</string>
    <string name="market">Market</string>
    <string name="search_in_map">Search in map</string>
    <string name="offers">Offers</string>
    <string name="offers_and_orders">Offers and orders</string>
    <string name="search2">Search</string>
    <string name="provider">Providers</string>
    <string name="contracts_num">Contracts:</string>
    <string name="order">Order</string>
    <string name="discount_nsheari">discount\nsheari</string>
    <string name="make_order">Make order</string>
    <string name="contract">Contract</string>
    <string name="rate">Rate :</string>
    <string name="contact_information">Contact information:</string>
    <string name="department">Department :</string>
    <string name="important">Important :</string>
    <string name="expected_period">Expected period :</string>
    <string name="cash_budget">Cash budget :</string>
    <string name="describe_order_optional">Describe order</string>
    <string name="country2">Country</string>
    <string name="city2">City</string>
    <string name="dept2">Department</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="online">Online</string>
    <string name="offline">Offline</string>
    <string name="conversation">Conversation</string>
    <string name="ads">Ads</string>
    <string name="location_on_map">Location on map</string>
    <string name="sub_cat">Sub category</string>
    <string name="upgrade">Upgrade</string>
    <string name="payment">Payment</string>
    <string name="payment_method">Payment method</string>
    <string name="paypal">Paypal</string>
    <string name="credit_debit">Credit/debit</string>
    <string name="cash">Cash</string>
    <string name="manage_profile">Manage profile</string>
    <string name="view">Views</string>
    <string name="attachments">Attachments</string>
    <string name="download_attachment">Download attachment</string>
    <string name="add_comments_here">Type comments here......</string>
    <string name="add_comment">Add comment</string>
    <string name="comments2">Comments :</string>
    <string name="no_comments_to_show">No comments to show</string>
    <string name="our_fields">Our fields</string>
    <string name="no_fields_to_show">No fields to show</string>
    <string name="special">Special</string>
    <string name="normal">Normal</string>
    <string name="no_ads_to_show">No ads to show</string>
    <string name="client">Client</string>
    <string name="provider2">Provider</string>
    <string name="region">Region</string>
    <string name="ch_region">Choose region</string>
    <string name="ads_department">Ads department</string>
    <string name="ch_ad_dept">Choose ad department</string>
    <string name="update_profile">Update profile</string>
    <string name="update">Update</string>
    <string name="prov_only">Providers only</string>
    <string name="sheari_discount">Sheari discount</string>
    <string name="our_works">Our Works</string>
    <string name="add_project">Add project</string>
    <string name="no_works_to_show">No works to show</string>
</resources>