<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <item android:id="@+id/profile"
        android:icon="@drawable/ic_user"
        android:title="@string/profile"/>
    <item android:id="@+id/manageProfile"
        android:icon="@drawable/ic_settings"
        android:title="@string/manage_profile"/>

    <item android:id="@+id/editProfile"
        android:icon="@drawable/ic_edit_user"
        android:title="@string/edit_profile"/>

    <item android:id="@+id/ads"
        android:icon="@drawable/ic_screen"
        android:title="@string/ads"/>

    <item android:id="@+id/notification"
        android:icon="@drawable/ic_nav_notification"
        android:title="@string/notifications"/>

    <item android:id="@+id/upgrade"
        android:icon="@drawable/ic_upgrade"
        android:title="@string/upgrade"/>

    <item android:id="@+id/share"
        android:icon="@drawable/ic_share"
        android:title="@string/share"/>

    <item android:id="@+id/lang"
        android:icon="@drawable/ic_language"
        android:title="@string/change_language"/>

    <item android:id="@+id/terms"
        android:icon="@drawable/ic_list"
        android:title="@string/terms_and_conditions"/>

    <item android:id="@+id/logout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"/>


</menu>
