<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="signUpModel"
            type="com.creative.share.apps.sheari.models.ProviderSignUpModel" />
    </data>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        android:fillViewport="true"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:background="@color/white"
            >

            <LinearLayout
                android:id="@+id/ll1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="10dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_company_type"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:layout_marginBottom="5dp"
                    />

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/gray6"
                    android:layout_marginEnd="30dp"
                    android:layout_marginRight="30dp">

                    <View
                        android:layout_width="180dp"
                        android:layout_height="match_parent"
                        android:background="@color/green" />

                </FrameLayout>



            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:orientation="horizontal"
                >
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    >
                    <RadioButton
                        android:id="@+id/rb1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_yellow_bg"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/holding_company"

                        />

                    <RadioButton
                        android:id="@+id/rb2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_yellow_bg"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/limited"

                        />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight=".5"
                    >
                    <RadioButton
                        android:id="@+id/rb3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_yellow_bg"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:text="@string/shareholding"

                        />

                    <RadioButton
                        android:id="@+id/rb4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:button="@drawable/rb_yellow_bg"
                        android:textColor="@color/black"
                        android:textSize="14sp"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/start_up"

                        />
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="40dp"
                android:background="@drawable/rounder_gray"
                android:paddingTop="25dp"
                android:paddingBottom="25dp"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/name2"
                    />
                <EditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="37dp"
                    android:layout_gravity="center_vertical"
                    android:inputType="textPersonName"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:layout_marginTop="5dp"
                    android:text="@={signUpModel.name}"
                    error="@{signUpModel.error_name}"



                    />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/country"
                    android:layout_marginTop="5dp"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_gray"
                    android:layout_marginTop="5dp"

                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:spinnerMode="dialog"
                        />
                </FrameLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/black"
                    android:textSize="15sp"
                    android:text="@string/city"
                    android:layout_marginTop="5dp"
                    />
                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounder_gray"
                    android:layout_marginTop="5dp"

                    >
                    <Spinner
                        android:layout_width="match_parent"
                        android:layout_height="37dp"
                        android:spinnerMode="dialog"
                        />
                </FrameLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="40dp"
                android:orientation="horizontal"
                >
                <Button
                    android:id="@+id/btnNext"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@drawable/btn_as_client"
                    android:text="@string/next"/>

                <Button
                    android:id="@+id/btnPrevious"
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    android:background="@drawable/btn_as_provider"
                    android:text="@string/previous"
                    android:layout_marginStart="10dp"
                    android:layout_marginEnd="10dp"
                    />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>
</layout>