<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/white"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/year"
            android:textStyle="bold"
            />

        <NumberPicker
            android:id="@+id/npd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal"
            android:layout_marginBottom="10dp"
            >
            <Button
                android:id="@+id/btnSelect"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:textSize="15sp"
                android:textColor="@color/colorPrimary"
                android:text="@string/select"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/transparent"
                android:textSize="15sp"
                android:textColor="@color/gray6"
                android:text="@string/cancel"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"/>


        </LinearLayout>
    </LinearLayout>
</layout>
